[package]
name = "pipeviewer"
version = "1.0.0"
edition = "2021"
description = "Course version of the pv utility"
homepage = "https://github.com/ulphidius/pipeviewer"
repository = "https://github.com/ulphidius/pipeviewer"
readme = "README.md"
licence = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.13"
crossbeam = "0.8.1"
crossterm = "0.22.1"
